<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015. Adam Pioterek
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files
  ~     (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify,
  ~     merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~     furnished to do so, subject to the following conditions:
  ~
  ~     The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  ~     OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
  ~     LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR
  ~     IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_htp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_release_htp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView_htp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/htpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/htpTile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/htpHeader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpTitle"
                android:text="@string/htpHeader1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/htpPara1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpHeader1"
                android:text="@string/htpPara1" />

            <ImageView
                android:id="@+id/htpPic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpPara1"
                android:contentDescription="@string/htpPicDes1"
                android:src="@drawable/pic1" />

            <TextView
                android:id="@+id/htpDes1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/htpPic1"
                android:layout_toEndOf="@+id/htpPic1"
                android:layout_toRightOf="@+id/htpPic1"
                android:text="@string/htpPicSub1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/htpHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpPic1"
                android:text="@string/htpHeader2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/htpPara2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpHeader2"
                android:text="@string/htpPara2" />

            <ImageView
                android:id="@+id/htpPic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpPara2"
                android:contentDescription="@string/htpPicDes2"
                android:src="@drawable/pic2"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/htpDes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/htpPic2"
                android:layout_toEndOf="@+id/htpPic2"
                android:layout_toRightOf="@+id/htpPic2"
                android:text="@string/htpPicSub2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingBottom="10dp"
                android:textColor="@color/text_secondary" />

            <ImageView
                android:id="@+id/htpPic3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpPic2"
                android:contentDescription="@string/htpPicDes3"
                android:src="@drawable/pic3" />

            <TextView
                android:id="@+id/htpDes3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/htpPic3"
                android:layout_toEndOf="@+id/htpPic3"
                android:layout_toRightOf="@+id/htpPic3"
                android:text="@string/htpPicSub3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/htpHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpPic3"
                android:text="@string/htpHeader3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/htpPara3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/htpHeader3"
                android:text="@string/htpPara3" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>