<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/playBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultLight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="change"
        android:text="@string/Play"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/htpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="change"
        android:text="@string/Htp"
        android:textIsSelectable="false"
        android:textSize="40sp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_release_menu" />

    <TextView
        android:id="@+id/resultLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/htpBtn"
        android:layout_toLeftOf="@+id/divider"
        android:layout_toStartOf="@+id/divider"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/secondary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/htpBtn"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/resultsSeparator"
        android:textColor="@color/text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/resultDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/htpBtn"
        android:layout_toEndOf="@+id/divider"
        android:layout_toRightOf="@+id/divider"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/primary"
        android:textSize="30sp" />

    <Button
        android:id="@+id/resetRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/htpBtn"
        android:layout_marginTop="31dp"
        android:elevation="2dp"
        android:text="@string/resetResults"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>
